# anomalias-2026-2

./: .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml
data/: tbd_9horas.parquet
docs/: index.html  intro.html  search.json
docs/libro/: intro.html
docs/notebooks/: 001_birthday_problem.html  002_triangulo_pascal.html  003_sampling_distribution.html  004_Central_limit_teorem.html  005_DistribucionNormal_Seleccion.html  006_experimentos_nueve.html  007_muestreo_teoria.html  008a_muestreo_lab.html  008b_muestreo_lab.html  009_PruebasHipotesis.html  010_teoria_componentes_y_descomposicion.html  011_laboratorio_climalab.html  012_teoria_autocorrelacion.html  013_laboratorio_autocorrelacion.html  01_exploracion.html  02_deteccion.html
libro/: intro.qmd
notebooks/: 002_triangulo_pascal.ipynb  003_sampling_distribution.ipynb  004_Central_limit_teorem.ipynb  007_muestreo_teoria.ipynb  008_muestreo_lab.ipynb  008a_muestreo_lab.ipynb  008b_muestreo_lab.ipynb  009_PruebasHipotesis.ipynb  009_hipotesis_ic_teoria_lab.ipynb  009_ic_teoria.ipynb  010_ic_lab.ipynb  010_teoria_componentes_y_descomposicion.ipynb  011_hipotesis_teoria.ipynb  011_laboratorio_climalab.ipynb  012_teoria_autocorrelacion.ipynb  013_laboratorio_autocorrelacion.ipynb  015_autocorrelacion_teoria.ipynb  017_anomalias_teoria.ipynb  019_stl_teoria.ipynb  020_stl_lab.ipynb  tarea_stl.md
notebooks/.ipynb_checkpoints/: 001_birthday_problem-checkpoint.ipynb  002_triangulo_pascal-checkpoint.ipynb  003_sampling_distribution-checkpoint.ipynb  005_DistribucionNormal_Seleccion-checkpoint.ipynb  (+10 more)
(+9 files in other folders)
