[project]
name = "anomalias-2026-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
]
